Updated split such that it does not include the empty end of input string match. https://bugs.webkit.org/show_bug.cgi?id=138129 <rdar://problem/18807403>

Reviewed by Filip Pizlo.

* runtime/StringPrototype.cpp:
(JSC::stringProtoFuncSplit):
* tests/stress/empty_eos_regex_split.js: Added.

Canonical link: https://commits.webkit.org/158718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178860 268f45cc-cd09-0410-ab3c-d52691b4dbfc